# rpi4-ipxe

./: .devcontainer.json  .editorconfig  .gitignore  .gitmodules  Makefile  RedfishClientInjectorPlugin.py  RedfishClientInjector_plug_in.yaml  RpiPlatformBuild.py  config.txt  docker-build.sh  pip_requirements.txt  pyproject.toml  replacements.sh  test.sh  test_build.sh  test_config.py
.github/workflows/: ipxe.yml  linux_edk2.yml
Drivers/IpxeDxe/AArch64/: ipxe.efi
Firmware/drivers/IpxeDxe/: IpxeDxe.inf
dependencies.backup/: rpi-3-bp_ext_dep.yaml  rpi-4-bp_ext_dep.yaml
docs/: EDK2Docs.md  RedfishEfi.md
drivers/: ipxe.inf
internal/Platform/RaspberryPi/RPi5/: RPi5.dsc
